--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -187,6 +187,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\ConstantBuffer.cpp" />
     <ClCompile Include="src\Complex.cpp" />
     <ClCompile Include="src\BaseModel.cpp" />
     <ClCompile Include="src\DomainShader.cpp" />
@@ -309,6 +310,7 @@
     <ClCompile Include="src\VertexShader.cpp" />
     <ClCompile Include="src\DX11Window.cpp" />
     <ClCompile Include="src\SSAOPass.cpp" />
+    <ClCompile Include="src\StructuredBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Complex.h" />
